matchCounter spacing fix

--- a/common/client-base/src/main/webapp/html/css/style.css
+++ b/common/client-base/src/main/webapp/html/css/style.css
@@ -689,7 +689,7 @@ a.contact-button :hover {
 .knet_button:hover {color:white; background-color:darkgray;}
 #pGViewer_title {padding-bottom:10px;padding-top:10px;font-size:12px;margin:auto; width:70%;color:white;}
 .preloader_bar {left:250px;position:relative;}
-#matchesResultDiv {font-size:12px; color:#9B9B9B; padding-bottom:15px; padding-top:10px;}
+#matchesResultDiv {font-size:12px; color:#9B9B9B; padding-bottom:10px; padding-top:10px;}
 #genemap-tab {position: relative;width: 90%;margin: auto;background-color: #F4F5F7;padding-bottom: 20px;margin-top: 30px;}
 
 #NetworkCanvas{position:relative;float:left;width: 95%/*850px*/; height: /*600*/640px; padding-bottom: /*70*/10px;}
